<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_menu"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/btnIrAgregar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_agregar_empleado"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnIrLista"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_ver_nomina"
        style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>