<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mi_color_fondo"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_agregar"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/mi_color_texto_titulo"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_nombre"
            android:textColorHint="#808080"
            android:textColor="@color/white"
            android:backgroundTint="@color/mi_color_boton"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etPuesto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_puesto"
            android:textColorHint="#808080"
            android:textColor="@color/white"
            android:backgroundTint="@color/mi_color_boton"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etSalario"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_salario"
            android:textColorHint="#808080"
            android:textColor="@color/white"
            android:backgroundTint="@color/mi_color_boton"
            android:inputType="numberDecimal"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_guardar_empleado"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/mi_color_boton"/>

    </LinearLayout>
</ScrollView>